# QR-Code-generator

./: LICENSE  Readme.markdown
project/: CMakeLists.txt  QrCode.cpp  QrCode.h  QrCodeGeneratorDemo.cpp  QrCodeGeneratorWorker.cpp  QrCodeImage.cpp  QrCodeImage.h  QrSegment.cpp
